# Bitchaser

./: .pre-commit-config.yaml  .temp-notes-to-self.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  mkdocs.yaml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  docs.yaml
docs/: index.md
docs/reference/: project-structure.md
docs/results/: short.md
docs/stylesheets/: extra.css
notebooks/: 01_data_exploration.ipynb  02_data_exploration.ipynb
scripts/: preprocess_data.py  update_section.py
src/bitchaser/: __init__.py  config.py  main.py  utils.py
src/bitchaser/data/: load.py  preprocess.py
src/bitchaser/evaluation/: metrics.py
src/bitchaser/features/: indicators.py
src/bitchaser/inference/: predict.py
src/bitchaser/models/: __init__.py  long.py  short.py
src/bitchaser/training/: train.py
tests/: __init__.py  test_models.py  test_package.py
tests/data/: test_preprocess.py
trees/: dep.txt  proj.txt
